--- a/public/Mexico/estiloMex.css
+++ b/public/Mexico/estiloMex.css
@@ -27,7 +27,11 @@
     border-radius: 50%;
     height:14px;
     width:14px;
+
+    outline: none;
 }
+
+
 
 .mapa{
 	background-image: url("mexico.png");
@@ -46,7 +50,7 @@
 
 .botones{
 	display: table-caption;
-	height: 300px;
+	height: 200px;
 }
 
 .separa{
@@ -57,4 +61,22 @@
 	width: 100px;
     white-space: normal;
 
+}
+
+.miBtn .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.miBtn:hover .tooltiptext {
+    visibility: visible;
 }
